force-app/main/default/objects/Budget_Line__c/Budget_Line__c.object-meta.xml
<CustomObject>
    <label>שורת תקציב</label>
    <nameField>
        <displayFormat>BL-{0000000}</displayFormat>
        <label>שת</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>שורות תקציב</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>