force-app/main/default/objects/Budget_Line__c/fields/Agency_Fee_Curr__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fee_Curr__c</fullName>
    <label>שכט - מטבע</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>