force-app/main/default/objects/Budget_Line__c/fields/Agency_Fee_Currency__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fee_Currency__c</fullName>
    <formula>IF( TEXT(Budget_Line_Type__c) =&quot;הפשרה&quot; ,

TEXT( Income__r.Novidea_HPC__Agency_Fee_Currency__c ),

TEXT(Policy__r.Novidea_HPC__Agency_Fees_Currency__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מטבע לשכט</label>
    <type>Text</type>
</CustomField>