force-app/main/default/objects/Budget_Line__c/fields/Agency_Fee_Currency_Rate__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fee_Currency_Rate__c</fullName>
    <label>שער מטבע לשכט</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>