force-app/main/default/objects/Budget_Line__c/fields/Agency_Fee_ILS__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fee_ILS__c</fullName>
    <formula>Agency_Fee_Curr__c * Agency_Fee_Currency_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שכט - שח</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>