force-app/main/default/objects/Budget_Line__c/fields/Agency_Fee_USD__c.field-meta.xml
<CustomField>
    <fullName>Agency_Fee_USD__c</fullName>
    <formula>Agency_Fee_Curr__c * Agency_Fee_Currency_Rate__c / Budget_USD_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>שכט - דולר</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>