force-app/main/default/objects/Budget_Line__c/fields/Block_Auto_Update__c.field-meta.xml
<CustomField>
    <fullName>Block_Auto_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>לשימוש כאשר נעשו שינויים ידניים על שורת התקציב ולא רוצים שהשורה תתעדכן בהרצות הבאות</inlineHelpText>
    <label>נעילת עדכון אוטומטי</label>
    <type>Checkbox</type>
</CustomField>