force-app/main/default/objects/Budget_Line__c/fields/Budget_Commisson_Curr__c.field-meta.xml
<CustomField>
    <fullName>Budget_Commisson_Curr__c</fullName>
    <label>עמלה לתקציב - מטבע</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>