force-app/main/default/objects/Budget_Line__c/fields/Budget_Commisson_ILS__c.field-meta.xml
<CustomField>
    <fullName>Budget_Commisson_ILS__c</fullName>
    <formula>Budget_Commisson_Curr__c * Budget_Currency_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>עמלה לתקציב - שח</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>