force-app/main/default/objects/Budget_Line__c/fields/Budget_Commisson_SubAgent_Curr__c.field-meta.xml
<CustomField>
    <fullName>Budget_Commisson_SubAgent_Curr__c</fullName>
    <label>עמלת סוכן משנה - מטבע</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>