force-app/main/default/objects/Budget_Line__c/fields/Budget_Currency__c.field-meta.xml
<CustomField>
    <fullName>Budget_Currency__c</fullName>
    <formula>IF( TEXT(Budget_Line_Type__c) =&quot;הפשרה&quot;,
TEXT(Income__r.Novidea_HPC__Premium_Currency__c ),

TEXT(Policy__r.Novidea_HPC__Premium_Amount_Currency__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מטבע לתקציב</label>
    <type>Text</type>
</CustomField>