force-app/main/default/objects/Budget_Line__c/fields/Budget_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_End_Date__c</fullName>
    <formula>Budget_Year__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תאריך סיום</label>
    <type>Date</type>
</CustomField>