force-app/main/default/objects/Budget_Line__c/fields/Budget_Entity__c.field-meta.xml
<CustomField>
    <fullName>Budget_Entity__c</fullName>
    <label>ישות לתקציב</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Howden 2002</fullName>
            </value>
            <value>
                <fullName>Howden 2011</fullName>
            </value>
            <value>
                <fullName>Howden Re</fullName>
            </value>
            <value>
                <fullName>Howden Wise</fullName>
            </value>
            <value>
                <fullName>BZR</fullName>
            </value>
            <value>
                <fullName>M.M.I</fullName>
            </value>
            <value>
                <fullName>Howden Boutique</fullName>
            </value>
            <value>
                <fullName>Nilibit</fullName>
            </value>
            <value>
                <fullName>Howden Boutique (Nilibit)</fullName>
            </value>
            <value>
                <fullName>Howden 2002 (Nilibit)</fullName>
            </value>
            <value>
                <fullName>Howden Surety</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>