force-app/main/default/objects/Budget_Line__c/fields/Budget_Income_ILS__c.field-meta.xml
<CustomField>
    <fullName>Budget_Income_ILS__c</fullName>
    <formula>Budget_Commisson_ILS__c -  Budget_Commisson_SubAgent_ILS__c -  Cost_of_Sales_ILS__c +  Agency_Fee_ILS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>הכנסה לתקציב - שח</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>