force-app/main/default/objects/Budget_Line__c/fields/Budget_Income_USD__c.field-meta.xml
<CustomField>
    <fullName>Budget_Income_USD__c</fullName>
    <formula>Budget_Commisson_USD__c - Budget_Commisson_SubAgent_USD__c -  Cost_of_Sales_USD__c +  Agency_Fee_USD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>הכנסה לתקציב - דולר</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>