force-app/main/default/objects/Budget_Line__c/fields/Budget_Internal_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Budget_Internal_Profit_Center__c</fullName>
    <label>מרכז רווח פנימי לתקציב</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Internal_Profit_Center</valueSetName>
    </valueSet>
</CustomField>