force-app/main/default/objects/Budget_Line__c/fields/Budget_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line_Type__c</fullName>
    <label>קטגוריה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מלאי קיים</fullName>
            </value>
            <value>
                <fullName>רבעון אבוד</fullName>
            </value>
            <value>
                <fullName>הפשרה</fullName>
            </value>
            <value>
                <fullName>הפשרה רבעון אבוד</fullName>
            </value>
            <value>
                <fullName>ממי</fullName>
            </value>
            <value>
                <fullName>מנורה עמולות חובה</fullName>
            </value>
            <value>
                <fullName>חדש בגין רבעון אבוד</fullName>
            </value>
            <value>
                <fullName>חדש</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>