force-app/main/default/objects/Budget_Line__c/fields/Budget_Month__c.field-meta.xml
<CustomField>
    <fullName>Budget_Month__c</fullName>
    <formula>IF(ISBLANK( Budget_Month_Manual__c ),


IF(  TEXT(Budget_Line_Type__c) =&quot;הפשרה&quot;   ,DATE(YEAR(Income__r.Novidea_HPC__Income_Recognition_Date__c  ),MONTH(Income__r.Novidea_HPC__Income_Recognition_Date__c  ) ,1),

IF(  TEXT(Budget_Line_Type__c) =&quot;רבעון אבוד&quot;   , Policy__r.Renewal_Date_Lost_Q__c ,

IF(NOT(ISBLANK( TEXT(Hafshara_Lost_Q_Flag__c ))), Policy__r.Hafshara_Lost_Q_Date__c ,

DATE(YEAR(Policy__r.Novidea_HPC__Expiration_Date__c + 1),MONTH(Policy__r.Novidea_HPC__Expiration_Date__c + 1) ,1)

)))
,Budget_Month_Manual__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>חודש תקציב</label>
    <type>Date</type>
</CustomField>