force-app/main/default/objects/Budget_Line__c/fields/Budget_Month_lookup__c.field-meta.xml
<CustomField>
    <fullName>Budget_Month_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>חודש לתקציב</label>
    <referenceTo>Budget_Month__c</referenceTo>
    <relationshipLabel>שורות תקציב</relationshipLabel>
    <relationshipName>Budget_Month</relationshipName>
    <type>Lookup</type>
</CustomField>