force-app/main/default/objects/Budget_Line__c/fields/Budget_Month_Manual__c.field-meta.xml
<CustomField>
    <fullName>Budget_Month_Manual__c</fullName>
    <inlineHelpText>להזין רק אם רוצים לשנות את חודש תקציב שמגיע בברירת מחדל, אחרת להשאיר ריק</inlineHelpText>
    <label>חודש תקציב - ידני</label>
    <type>Date</type>
</CustomField>