force-app/main/default/objects/Budget_Line__c/fields/Budget_Param__c.field-meta.xml
<CustomField>
    <fullName>Budget_Param__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>נתון לתקציב</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Budget_Year__c</field>
            <operation>equals</operation>
            <valueField>Budget_Param__c.Budget_Year__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Budget_Param__c</referenceTo>
    <relationshipLabel>שורות תקציב</relationshipLabel>
    <relationshipName>Budget_Line</relationshipName>
    <type>Lookup</type>
</CustomField>