force-app/main/default/objects/Budget_Line__c/fields/Budget_Premium_Currency__c.field-meta.xml
<CustomField>
    <fullName>Budget_Premium_Currency__c</fullName>
    <label>פרמיה לתקציב - מטבע</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>