force-app/main/default/objects/Budget_Line__c/fields/Budget_Premium_USD__c.field-meta.xml
<CustomField>
    <fullName>Budget_Premium_USD__c</fullName>
    <formula>Budget_Premium_Currency__c *  Budget_Currency_Rate__c /  Budget_USD_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>פרמיה לתקציב - דולר</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>