force-app/main/default/objects/Budget_Line__c/fields/Budget_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Start_Date__c</fullName>
    <formula>Budget_Year__r.Budget_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>תאריך התחלה</label>
    <type>Date</type>
</CustomField>