force-app/main/default/objects/Budget_Line__c/fields/Budget_USD_Rate__c.field-meta.xml
<CustomField>
    <fullName>Budget_USD_Rate__c</fullName>
    <label>שער דולר לתקציב</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>