force-app/main/default/objects/Budget_Line__c/fields/Budget_Year__c.field-meta.xml
<CustomField>
    <fullName>Budget_Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>קישור לשנת תקציב</label>
    <referenceTo>Budget_Year__c</referenceTo>
    <relationshipLabel>שורות תקציב</relationshipLabel>
    <relationshipName>Budget_Line</relationshipName>
    <type>Lookup</type>
</CustomField>