force-app/main/default/objects/Budget_Line__c/fields/calc_group__c.field-meta.xml
<CustomField>
    <fullName>calc_group__c</fullName>
    <formula>IF(ISBLANK( Product_Definition__c ),  Internal_Profit_Center__c ,
Internal_Profit_Center__c &amp;&quot;-&quot;&amp; Product_Definition__c
)</formula>
    <label>_calc group</label>
    <type>Text</type>
</CustomField>