force-app/main/default/objects/Budget_Line__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <formula>Policy__r.Novidea_HPC__Client__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>לקוח</label>
    <type>Text</type>
</CustomField>