force-app/main/default/objects/Budget_Line__c/fields/Cost_of_Sales_Curr__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Sales_Curr__c</fullName>
    <label>עלות מכר שפי - מטבע</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>