force-app/main/default/objects/Budget_Line__c/fields/Cost_of_Sales_Tot_Curr__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Sales_Tot_Curr__c</fullName>
    <formula>Cost_of_Sales_Curr__c +  Budget_Commisson_SubAgent_Curr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>עלות מכר - מטבע</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>