force-app/main/default/objects/Budget_Line__c/fields/Cost_of_Sales_Tot_ILS__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Sales_Tot_ILS__c</fullName>
    <formula>Cost_of_Sales_ILS__c +  Budget_Commisson_SubAgent_ILS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>עלות מכר - שח</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>