force-app/main/default/objects/Budget_Line__c/fields/Cost_of_Sales_USD__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Sales_USD__c</fullName>
    <formula>Cost_of_Sales_Curr__c * Budget_Currency_Rate__c / Budget_USD_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>עלות מכר שפי - דולר</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>