force-app/main/default/objects/Budget_Line__c/fields/Hafshara_Lost_Q_Flag__c.field-meta.xml
<CustomField>
    <fullName>Hafshara_Lost_Q_Flag__c</fullName>
    <label>הפשרה רבעון אבוד</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UC1</fullName>
            </value>
            <value>
                <fullName>UC2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>