force-app/main/default/objects/Budget_Line__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>רלווטי להפשרה</inlineHelpText>
    <label>הכנסה</label>
    <referenceTo>Novidea_HPC__Income__c</referenceTo>
    <relationshipLabel>שורות תקציב</relationshipLabel>
    <relationshipName>BudgetLine</relationshipName>
    <type>Lookup</type>
</CustomField>