force-app/main/default/objects/Budget_Line__c/fields/Income_Source__c.field-meta.xml
<CustomField>
    <fullName>Income_Source__c</fullName>
    <label>מקור הכנסה</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Income_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חדש לא מתחדש</fullName>
            </value>
            <value>
                <fullName>חדש לקוחות חדשים</fullName>
            </value>
            <value>
                <fullName>חדש מכירה צולבת</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>