force-app/main/default/objects/Budget_Line__c/fields/Income_Type__c.field-meta.xml
<CustomField>
    <fullName>Income_Type__c</fullName>
    <label>סוג הכנסה</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חידוש</fullName>
            </value>
            <value>
                <fullName>חדש</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>PPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>