force-app/main/default/objects/Budget_Line__c/fields/Internal_Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Internal_Profit_Center__c</fullName>
    <formula>Policy__r.Internal_Profit_Center_f__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מרכז רווח פנימי</label>
    <type>Text</type>
</CustomField>