force-app/main/default/objects/Budget_Line__c/fields/MMI__c.field-meta.xml
<CustomField>
    <fullName>MMI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ממי</label>
    <type>Checkbox</type>
</CustomField>