force-app/main/default/objects/Budget_Line__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>פוליסה</label>
    <referenceTo>Novidea_HPC__Policy__c</referenceTo>
    <relationshipLabel>שורות תקציב</relationshipLabel>
    <relationshipName>Budget_Line</relationshipName>
    <type>Lookup</type>
</CustomField>