force-app/main/default/objects/Budget_Line__c/fields/Product_Definition__c.field-meta.xml
<CustomField>
    <fullName>Product_Definition__c</fullName>
    <formula>IF(ISBLANK( Product_Definition_Manual__c) , 
Policy__r.Novidea_HPC__Product_Definition__r.Name
, Product_Definition_Manual__c)</formula>
    <label>מוצר</label>
    <type>Text</type>
</CustomField>