force-app/main/default/objects/Budget_Line__c/fields/Product_Definition_Manual__c.field-meta.xml
<CustomField>
    <fullName>Product_Definition_Manual__c</fullName>
    <label>מוצר - ידני</label>
    <length>255</length>
    <type>Text</type>
</CustomField>